@@ -13,6 +13,7 @@ before_script:
   - ./autogen.sh
   - ./configure
   - sudo chmod +r /var/log/syslog
+  - sudo chmod 777 /var/run
 script:
   - ./server/mlpl/test/run-test.sh
   - cd server/test && ./run-test.sh
