@@ -1,4 +1,4 @@
-SUBDIRS = server client
+SUBDIRS = server client data/init.d
 ACLOCAL_AMFLAGS = -I m4
 
 EXTRA_DIST = autogen.sh README.md hatohol.spec
