@@ -1,0 +1,2 @@
+initscript_DATA = hatohol.centos
+initscriptdir = $(pkgdatadir)
