@@ -1,0 +1,2 @@
+initscript_DATA = hatohol.debian
+initscriptdir = $(pkgdatadir)
