@@ -46,7 +46,7 @@ testHatohol_la_SOURCES = \
 	testJsonParserAgent.cc testJsonBuilderAgent.cc testUtils.cc \
 	testNamedPipe.cc \
 	testArmZabbixAPI.cc testArmNagiosNDOUtils.cc \
-	testUnifiedDataStore.cc
+	testUnifiedDataStore.cc testMain.cc
 testHatohol_la_LDFLAGS = $(AM_LDFLAGS) $(LIBS)
 testHatohol_la_LIBADD = libTest.la
 
